# qqmusic-rust

./: Cargo.toml  build.sh  index.py  main.go
scf/go/: main.go  router.go
scf/js/: index.js
scf/py/: index.py
src/: main.rs  song.rs  top.rs
src/json/: get_song.json  res.json  song.json  top.json  vkey.json
