[package]
name = "qqmusic-rust"
version = "0.1.0"
authors = ["小舟从此逝 <1052334039@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"
regex = "1.3.6"
chrono = "0.4.11"
base64 = "0.12.0"
bincode = "1.2.1"
cookie = "0.13.3"
http = "0.2.1"
reqwest = { version = "0.10.4", features = ["json","cookies"] }
tokio = { version = "0.2.16", features = ["full"] }
url = "2.1.1"

